-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.0.0 Beta 2
-
Fix Version/s: 5.0.0 RC 1
-
Component/s: Packaging & Installer
-
Labels:None
-
Environment:Mac OS X 10.8
-
Platform/s:
Using package:
created_on_2012-11-08_11:33_EET
libdeclarative_multimedia.dylib from the installer contains a dependency to QtMultimediaQuick_p.framework on the build machine instead of the install folder.
libdeclarative_multimedia.dylib: libdeclarative_multimedia.dylib (compatibility version 0.0.0, current version 0.0.0) /Users/bld.qt/bamboo-agent-home/xml-data/build-dir/DQTC-RELEASE5LGPL-OSX106/qt5_workdir/w/s/qtbase/qtbase/lib/QtMultimediaQuick_p.framework/Versions/5/QtMultimediaQuick_p (compatibility version 5.0.0, current version 5.0.0) /Users/caroline/Qt5.0.0beta2/5.0.0-beta2/clang_64/lib/QtQuick.framework/Versions/5/QtQuick (compatibility version 5.0.0, current version 5.0.0) /Users/caroline/Qt5.0.0beta2/5.0.0-beta2/clang_64/lib/QtQml.framework/Versions/5/QtQml (compatibility version 5.0.0, current version 5.0.0) /Users/caroline/Qt5.0.0beta2/5.0.0-beta2/clang_64/lib/QtNetwork.framework/Versions/5/QtNetwork (compatibility version 5.0.0, current version 5.0.0) /Users/caroline/Qt5.0.0beta2/5.0.0-beta2/clang_64/lib/QtCore.framework/Versions/5/QtCore (compatibility version 5.0.0, current version 5.0.0) /Users/caroline/Qt5.0.0beta2/5.0.0-beta2/clang_64/lib/QtGui.framework/Versions/5/QtGui (compatibility version 5.0.0, current version 5.0.0) /Users/caroline/Qt5.0.0beta2/5.0.0-beta2/clang_64/lib/QtMultimedia.framework/Versions/5/QtMultimedia (compatibility version 5.0.0, current version 5.0.0) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/ApplicationServices (compatibility version 1.0.0, current version 41.0.0) /System/Library/Frameworks/CoreAudio.framework/Versions/A/CoreAudio (compatibility version 1.0.0, current version 1.0.0) /System/Library/Frameworks/AudioUnit.framework/Versions/A/AudioUnit (compatibility version 1.0.0, current version 1.0.0) /System/Library/Frameworks/AudioToolbox.framework/Versions/A/AudioToolbox (compatibility version 1.0.0, current version 1.0.0) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit (compatibility version 45.0.0, current version 1138.32.0) /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore (compatibility version 1.2.0, current version 1.7.0) /System/Library/Frameworks/QTKit.framework/Versions/A/QTKit (compatibility version 1.0.0, current version 1.0.0) /System/Library/Frameworks/OpenGL.framework/Versions/A/OpenGL (compatibility version 1.0.0, current version 1.0.0) /System/Library/Frameworks/AGL.framework/Versions/A/AGL (compatibility version 1.0.0, current version 1.0.0) /usr/lib/libstdc++.6.dylib (compatibility version 7.0.0, current version 52.0.0) /usr/lib/libSystem.B.dylib (compatibility version 1.0.0, current version 159.1.0)
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-
- replaces
-
QTBUG-27826 Hardcoded library paths in osx installation
-
- Closed
-
For Gerrit Dashboard: QTBUG-27898 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
39390,2 | Fix patching of QtMultimediaQuick_p.framework | master | installer-framework/installer-framework | Status: ABANDONED | -2 | 0 |
39396,1 | Fix patching of QtMultimediaQuick_p.framework | qt5 | installer-framework/installer-framework | Status: MERGED | +2 | 0 |