Fix patching of QtMultimediaQuick_p.framework

Task-number: QTBUG-27898
Change-Id: I58b62473d8cb22bd4ea9627f45a8302158527d72
Reviewed-by: Kai Koehne <kai.koehne@digia.com>
Reviewed-by: Iikka Eklund <iikka.eklund@digia.com>